# GigaTorch

./: .gitignore  README.md  data.py  dockerfile  engine.py  neural-network.py  pyproject.toml  requirements.txt  run.sh  setup.py  tests.py
.github/workflows/: docker-build-test.yml  python-package.yml
example/image_models/: cnn_pytorch.ipynb
example/image_models/gigatorch/: cnn.py
example/image_models/pytorch/: cnn.ipynb
example/language_model/: bigram.py  language-model.py  lm.py  makemore_part2_mlp.ipynb
example/language_model/gigatorch/: CBOW.py
example/language_model/pytorch/: RNN.ipynb  bigram.py  cbow.ipynb  language-model.py  rnn.py
example/language_model/pytorch/name_classification/: rnn.ipynb
example/language_model/pytorch/next_word_prediction/: data.txt  rnn.ipynb
gigatorch/: __main__.py  activation_fn.py  cnn.py  embedding.py  loss.py  nn.py  rnn.py  tensor.py  transformer.py  utils.py  visualize.py  weight_init.py
mytorch/: __main__.py  cnn.py  engine.py  loss.py  nn.py  tensor.py  visualize.py  weight_init.py
tests/: cnn_test.py  embedding_test.py  engine_test.py  loss_test.py  nn_test.py  tensor_test.py  transformer_test.py  weight_init_test.py
